# amazon-vod-preset-convert

./: README.md  ets_mediaconvert_preset_v2.py  ets_mediaconvert_preset_v3.py  pyproject.toml
