[tool.poetry]
name = "amazon-vod-preset-convert"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.36.21"


[tool.poetry.group.dev.dependencies]
ruff = "^0.9.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
